# a2claude

./: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
src/a2acode/: __init__.py  auth.py  card.py  cli.py  executor.py  tracing.py
src/a2acode/backends/: __init__.py  acp.py  base.py  claude.py  echo.py  session.py
src/a2claude/: auth.py  card.py  cli.py  executor.py  server.py  tracing.py
src/a2claude/backends/: __init__.py  acp.py  base.py  claude.py  diff.py  echo.py  session.py
tests/: test_acp.py  test_auth.py  test_claude_backend.py  test_cli.py  test_executor.py  test_signing.py  test_smoke.py  test_tracing.py
