[project]
name = "a2claude"
version = "0.3.0"
description = "Serve Claude Code and other ACP coding agents over the A2A protocol."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "kanywst" }]
keywords = ["a2a", "acp", "claude-code", "agent", "agent2agent"]
dependencies = [
    "a2a-sdk[http-server,signing]>=1.1,<2",
    "agent-client-protocol>=0.10,<1",
    "uvicorn>=0.49",
    "httpx>=0.28",
    "typer>=0.26",
]

[project.optional-dependencies]
# The Claude SDK backend (backends/claude.py): drives Claude Code directly
# through the Claude Agent SDK instead of over ACP. The ACP backend fronts
# Claude Code too, so this is only needed for the SDK-native path.
claude = ["claude-agent-sdk>=0.2.101"]
# Distributed tracing. Pulls the A2A SDK's OpenTelemetry instrumentation plus
# the API a2claude's own spans import directly (declared rather than relied on
# transitively through the SDK). Install with `a2claude[telemetry]`.
telemetry = ["a2a-sdk[telemetry]>=1.1,<2", "opentelemetry-api>=1.33"]

[project.scripts]
a2claude = "a2claude.cli:app"

[project.urls]
Repository = "https://github.com/kanywst/a2claude"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=9",
    "pytest-asyncio>=1.4",
    "mypy>=2.1",
    # So the test suite can exercise the tracing path with a real exporter.
    "opentelemetry-sdk>=1.33",
    # The Claude SDK backend is an optional extra; pull it in for dev so its
    # tests (test_claude_backend.py) run.
    "claude-agent-sdk>=0.2.101",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
files = ["src"]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
